2013-07-29  Peter Bloomfield

	Fix part of bug #704718 (Geoffrey Leach).

	* src/pref-manager.c (apply_prefs), (set_prefs): apply and set
	BalsaApplication::fatal_message.

2013-07-28  Peter Bloomfield

	* src/message-window.c (mw_reset_show_all_headers),
	(mw_set_buttons_sensitive), (mw_set_message),
	(message_window_move_message), (mw_mru_menu_cb),
	(mw_select_part_cb), (message_window_new): move code to
	eliminate local declarations.

2013-07-28  Peter Bloomfield

	* src/message-window.c: make message-window a
	GtkApplicationWindow, and port menus from GtkUIManager to
	GtkBuilder and from GtkAction to GAction.
	* src/toolbar-prefs.c: temporarily disable editing message-window
	toolbar.
	* ui/message-window.ui: new file.
	* ui/Makefile.am: add it.

2013-07-28  Peter Bloomfield

	* libbalsa/application-helpers.c (libbalsa_window_get_menu_bar):
	add callback-data argument;
	(libbalsa_window_add_accelerator): new public method;
	(libbalsa_radio_activated): common callback for the "activated"
	signal of a radio-GAction.
	* libbalsa/application-helpers.h: new API.
	* libbalsa/source-viewer.c (libbalsa_show_message_source): use
	new API.
	* src/main-window.c (bw_set_menus): ditto,

2013-07-23  Peter Bloomfield

	* src/main-window.c (bw_alt_n_cb), (bw_set_alt_bindings),
	(balsa_window_new): restore <alt>n key bindings to change
	mailbox tab.

2013-07-22  Peter Bloomfield

	* src/main-window.c (toolbars_activated), (identities_activated),
	(bw_set_menus): restore Settings submenu.

2013-07-22  Peter Bloomfield

	* src/toolbar-factory.c (tm_load_model): do not load stale
	options.

2013-07-22  Peter Bloomfield

	* src/main-window.c (bw_set_menus): use installed ui file.
	* ui/Makefile.am: install it.
	* ui/main-window.ui: new file.

2013-07-22  Peter Bloomfield

	Move GAction-toggled callback to application-helpers

	* libbalsa/application-helpers.c (libbalsa_window_get_menu_bar),
	(libbalsa_toggle_activated): install GAction-toggled callback.